--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
 		<title>Date Picker Demo</title>
+		<!--link rel="stylesheet" type="text/css" href="https://bootswatch.com/slate/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="src/daterangepicker.slate.css" /-->
 		<link rel="stylesheet" type="text/css" href="src/daterangepicker.css" />
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
@@ -31,8 +33,8 @@
 			background-color:#eee;
 			border-radius:4px;
 		}
-		.date-picker-wrapper.date-range-picker19 .day.first-date-selected { background-color: red !important; }
-		.date-picker-wrapper.date-range-picker19 .day.last-date-selected { background-color: orange !important; }
+		.date-picker-wrapper.date-range-picker19 .day.range-start { background-color: red !important; }
+		.date-picker-wrapper.date-range-picker19 .day.range-end { background-color: orange !important; }
 		button { color: black !important; }
 		</style>
 	</head>
@@ -154,7 +156,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startOfWeek : 'monday'
+	startOfWeek : 1
 }			
 </pre>
 			</div>
@@ -300,7 +302,7 @@
 </pre>
 			</div>
 			<div class="demo">
-				 Batch mode ( week ): <input id="date-range14" size="60" value="">
+				 Batch mode (week): <input id="date-range14" size="60" value="">
 				 <a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
@@ -309,7 +311,7 @@
 </pre>
 			</div>
     <div class="demo">
-				Batch mode ( week-range ): <input id="date-range14-2" size="60" value="">
+				Batch mode (week-range): <input id="date-range14-2" size="60" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
@@ -324,11 +326,13 @@
 {
 	beforeShowDay : function(t)
 	{
-		var valid = !(t.getDay() == 0 || t.getDay() == 6);  //disable saturday and sunday
-		var _class = '';
-		var _tooltip = valid ? '' : 'weekends are disabled';
-		// Allow span across disabled dates in later half of month (start/end at those dates is not allowed)
+		//disable saturday and sunday
+		var valid = !(t.getDay() == 0 || t.getDay() == 6); 
+		//allow skip disabled dates in later half of month (start/end at those dates is not allowed)
 		valid = valid || (t.getDate()>15? null : valid);
+		
+		var _class = '';
+		var _tooltip = valid ? '' : (valid === false?'Disabled':'Skipped');
 		return [valid,_class,_tooltip];
 	}
 }				
@@ -441,10 +445,10 @@ $('#date-range16-reset').click(function(evt)
 {
 	showDateFilter : function(time, date)
 	{
-		return '&lt;div style="padding:0 5px;">\
-					&lt;span style="font-weight:bold">'+date+'&lt;/span>\
-					&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>\
-				&lt;/div>';
+		return '&lt;div style="padding:0 5px;">'+\
+		'&lt;span style="font-weight:bold">'+date+'&lt;/span>'+\
+		'&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>'+\
+		'&lt;/div>';
 	}
 }
 </pre>
@@ -474,12 +478,12 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 {
 	showWeekNumbers : true,
-	startOfWeek : 'monday'
+	startOfWeek : 1
 }
 </pre>
 			</div>
 			<div class="demo">
-				Show Week Numbers ( support fiscal year, start from 2015-08-16): <input id="date-range24-3" size="30" value="">
+				Show Week Numbers (support fiscal year, start from 2015-08-16): <input id="date-range24-3" size="30" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
@@ -488,7 +492,7 @@ $('#date-range16-reset').click(function(evt)
 	{
 		var fiscalYearStart = moment('2015-08-16','YYYY-MM-DD');
 		var daysOffset = parseInt(fiscalYearStart.format('DDD'),10);
-		return moment(day).add( -1*daysOffset, 'days').format('W');
+		return moment(day).add(-1*daysOffset, 'days').format('W');
 	}
 }
 </pre>
@@ -517,14 +521,15 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 {
 	dateRange : {
-		start : new Date()
+		start : moment().subtract(15,'hour').startOf('day').add(1,'day').toDate()
 	},
 	selectForward : true,
+	showWeekNumbers : true,
 	showDateFilter : function(time, date)
 	{
 		return '&lt;div style="padding:0 5px;">'+
-		'&lt;span style="font-weight:bold">'+date+'&lt;/span>'
-		'&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>'
+		'&lt;span style="font-weight:bold">'+date+'&lt;/span>+'
+		'&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>+'
 		'&lt;/div>';
 	},
 	beforeShowDay : function(t)
@@ -577,7 +582,7 @@ $('#date-range16-reset').click(function(evt)
 	format : 'YYYY-MM-DD',
 	separator : ' to ',
 	language : 'auto',
-	startOfWeek : 'sunday',// or monday
+	startOfWeek : undefined,
 	getValue : function()
 	{
 		return $(this).val();
@@ -638,8 +643,8 @@ $('#date-range16-reset').click(function(evt)
 	<i>pre-defined languages are "en" and "cn", you can define your own
  	language then set this to the name of new language.
 	You can also set this to "auto" to make it auto detect browser language.</i>
-<b>startOfWeek (String)</b>
-	<i>"sunday" or "monday"</i>
+<b>startOfWeek (undefined, 0 or 1)</b>
+	<i>0 = sunday, 1 = monday, undefined = derive from locale</i>
 <b>getValue (Function)</b>
 	<i>This function is called when get date range string from DOM
 	When it is called, the context of this function is set to the datepicker DOM</i>
@@ -683,10 +688,10 @@ $('#date-range16-reset').click(function(evt)
 <b>singleMonth (Boolean) Default value: false</b>
 	<i>If true, it will show only one month instead of two months. You can select date range
 	in the one month view.</i>
-<b>showDateFilter ( Function(Int time, Int date) )</b>
+<b>showDateFilter (Function(Int time, Int date))</b>
 	<i>This is a callback function when creating each date element in the calendar. First paramter will
 	be the timestamp of that day. Second parameter will be the date of that month.</i>
-<b>customTopBar ( Function || String)</b>
+<b>customTopBar (Function || String)</b>
 	<i>If you set this parameter, it will use this value in the top bar.</i>
 <b>customArrowPrevSymbol (String / String HTML)</b>
 	<i>Set custom previous symbol, you can use html snippet too.</i>
@@ -700,7 +705,7 @@ $('#date-range16-reset').click(function(evt)
 	<i>If this is true, you can only select second date before the first selected date.</i>
 <b>showWeekNumbers (Boolean) Default: false</b>
 	<i>If this is true, it will show week number of the year in the calendar.</i>
-<b>getWeekNumber (Function( Date object ) )</b>
+<b>getWeekNumber (Function(Date object))</b>
 	<i>the function called to generate the week number. the first parameter will be the first day of a week</i>
 </pre>
 			<h2>Events</h2>
