--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			line-height:1.5;
 			font-size:14px;
 		}
-		.demo { margin:30px 0; }
+		.demo { margin:30px 20px 0 0; }
+		button { color: black !important; }
 		.options
 		{
 			display:none;
@@ -35,7 +36,6 @@
 		}
 		.date-picker-wrapper.date-range-picker19 .day.range-start { background-color: red !important; }
 		.date-picker-wrapper.date-range-picker19 .day.range-end { background-color: orange !important; }
-		button { color: black !important; }
 		</style>
 	</head>
 	<body>
@@ -354,43 +354,43 @@
 $('#date-range16').dateRangePicker(
 {
 	format : 'YYYY-MM-DD'
-}).bind('DRPick-change', function(evt, obj) {
+}).bind('DRPEx-change', function(evt, obj) {
 	alert('date1: ' + obj.date1 + ' / date2: ' + obj.date2);
 });
 $('#date-range16-open').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').open();
+	$('#date-range16').data('DRPEx').open();
 });
 $('#date-range16-close').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').close();
+	$('#date-range16').data('DRPEx').close();
 });
 $('#date-range16-set').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').setDateRange('2013-11-20','2014-08-25');
+	$('#date-range16').data('DRPEx').setDateRange('2013-11-20','2014-08-25');
 });
 $('#date-range16-set-silent').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').setDateRange('2014-11-03','2015-02-12', true);
+	$('#date-range16').data('DRPEx').setDateRange('2014-11-03','2015-02-12', true);
 });
 $('#date-range16-clear').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').clear();
+	$('#date-range16').data('DRPEx').clear();
 });
 $('#date-range16-destroy').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick');
+	$('#date-range16').data('DRPEx');
 });
 $('#date-range16-reset').click(function(evt)
 {
 	evt.stopPropagation();
-	$('#date-range16').data('DRPick').resetMonthsView();
+	$('#date-range16').data('DRPEx').resetMonthsView();
 });
 </pre>
 			</div>
@@ -583,15 +583,12 @@ $('#date-range16-reset').click(function(evt)
 	separator : ' to ',
 	language : 'auto',
 	startOfWeek : undefined,
-	getValue : function()
-	{
+	getValue : function() {
 		return $(this).val();
 	},
-	setValue : function(s)
-	{
-		if (s != $(this).val()) {
+	setValue : function(s) {
+		if (s != $(this).val())
 			$(this).val(s).change();
-		}
 	},
 	dateRange : {
 		start : false,
@@ -613,7 +610,7 @@ $('#date-range16-reset').click(function(evt)
 	singleDate : false,
 	lookBehind : false,
 	batchMode : false,
-	duration : 200,
+	animationTime : 200,
 	stickyMonths : false,
 	applyBtnClass : '',
 	singleMonth : 'auto',
@@ -713,7 +710,7 @@ $('#date-range16-reset').click(function(evt)
 <pre>
 $('#dom-id')
 .dateRangePicker()
-.bind('DRPick-first-date', function(event, obj)
+.bind('DRPEx-first-date', function(event, obj)
 {
 	/* This event will be triggered when first date is selected */
 	console.log(obj);
@@ -722,7 +719,7 @@ $('#dom-id')
 	// 		date1: (Date object of the earlier date)
 	// }
 })
-.bind('DRPick-change',function(event,obj)
+.bind('DRPEx-change',function(event,obj)
 {
 	/* This event will be triggered when second date is selected */
 	console.log(obj);
@@ -733,27 +730,27 @@ $('#dom-id')
 	//	 	value: "2013-06-05 to 2013-06-07"
 	// }
 })
-.bind('DRPick-apply',function(event,obj)
+.bind('DRPEx-apply',function(event,obj)
 {
 	/* This event will be triggered when user clicks on the apply button */
 	console.log(obj);
 })
-.bind('DRPick-close',function()
+.bind('DRPEx-close',function()
 {
 	/* This event will be triggered before date range picker close animation */
 	console.log('before close');
 })
-.bind('DRPick-closed',function()
+.bind('DRPEx-closed',function()
 {
 	/* This event will be triggered after date range picker close animation */
 	console.log('after close');
 })
-.bind('DRPick-open',function()
+.bind('DRPEx-open',function()
 {
 	/* This event will be triggered before date range picker open animation */
 	console.log('before open');
 })
-.bind('DRPick-opened',function()
+.bind('DRPEx-opened',function()
 {
 	/* This event will be triggered after date range picker open animation */
 	console.log('after open');
@@ -762,14 +759,14 @@ $('#dom-id')
 			<h2>APIs</h2>
 <pre>
 //after you called  $(dom).dateRangePicker();
-$(dom).data('DRPick')
+$(dom).data('DRPEx')
     //set date range, two date strings should follow the `format` in config object,
-    //set the third argument to be `true` if you don't want this method to trigger a `DRPick-change` event.
+    //set the third argument to be `true` if you don't want this method to trigger a `DRPEx-change` event.
 	.setDateRange('2013-11-20','2013-11-25');
 	//set the start date to the specified date
 	.setStart('2013-11-20');
 	//set the end date to the specified date
-	//set the second argument to `true` if you don't want this method to trigger a `DRPick-change` event.
+	//set the second argument to `true` if you don't want this method to trigger a `DRPEx-change` event.
 	.setEnd('2013-11-25');
 	.clear();		// clear date range
 	.close();		// close date range picker overlay
