--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<p>
 				Requires
 				<a href="http://jquery.com/" target=_blank>jQuery</a> 1.4.2+ (MIT LICENSE),
-				<a href="http://momentjs.com/" target=_blank>Moment</a> 2.8.1+ (MIT LICENSE)
+				<a href="http://momentjs.com/" target=_blank>MomentJS</a> 2.8.1+ (MIT LICENSE)
 			</p>
 			<p>
 				Compatible Browsers:
@@ -581,7 +581,7 @@ $('#date-range16-reset').click(function(evt)
 	watchValueChange: true,
 	format : 'YYYY-MM-DD',
 	separator : ' to ',
-	language : 'auto',
+	language : undefined,
 	startOfWeek : undefined,
 	getValue : function() {
 		return $(this).val();
@@ -596,8 +596,7 @@ $('#date-range16-reset').click(function(evt)
 	},
 	minDays : 0,
 	maxDays : 0,
-	shortcuts:
-	{
+	shortcuts: {
 		//'prev-days' : [1,3,5,7],
 		//'next-days' : [3,5,7],
 		//'prev' : ['week','month','year'],
@@ -613,17 +612,14 @@ $('#date-range16-reset').click(function(evt)
 	animationTime : 200,
 	stickyMonths : false,
 	applyBtnClass : '',
-	singleMonth : 'auto',
-	hoveringTooltip : function(days, startTime, hoveringTime)
-	{
+	hoveringTooltip : function(days, startTime, hoveringTime) {
 		return days > 1 ? days + ' ' + lang('days') : '';
 	},
 	showTopbar : true,
 	selectForward : false,
 	selectBackward : false,
 	showWeekNumbers : false,
-	getWeekNumber : function(date) //date will be the first day of a week
-	{
+	getWeekNumber : function(date) //date will be the first day of a week {
 		return moment(date).format('w');
 	}
 }
@@ -632,18 +628,16 @@ $('#date-range16-reset').click(function(evt)
 			<h3>You can use the following keys in the configObject to overwrite the default configuration:</h3>
 <pre>
 <b>format (String)</b>
-	<i>The date format string used for Moment.
-	click <a href="http://momentjs.com/docs/#/displaying/format/" target=_blank>here</a> to see Moment documentation</i>
+	<i>The date format string used for MomentJS.
+	See <a href="http://momentjs.com/docs/#/displaying/format/" target=_blank>MomentJS documentation</a></i>
 <b>separator (String)</b>
 	<i>The separator string used between date strings</i>
-<b>language (String)</b>
-	<i>pre-defined languages are "en" and "cn", you can define your own
- 	language then set this to the name of new language.
-	You can also set this to "auto" to make it auto detect browser language.</i>
+<b>language (undefined or String)</b>
+	<i>Pre-defined languages names; undefined = detect browser languages; New languages customizable.</i>
 <b>startOfWeek (undefined, 0 or 1)</b>
 	<i>0 = sunday, 1 = monday, undefined = derive from locale</i>
 <b>getValue (Function)</b>
-	<i>This function is called when get date range string from DOM
+	<i>This function is called when get date range string from DOM.
 	When it is called, the context of this function is set to the datepicker DOM</i>
 <b>setValue (Function)</b>
 	<i>This function is called when set date range string to DOM</i>
@@ -665,8 +659,8 @@ $('#date-range16-reset').click(function(evt)
 <b>container (String, css selector || DOM Object)</b>
 	<i>where should the date range picker dom should be renderred to</i>
 <b>alwaysOpen (Boolean)</b>
-	<i>if you use inline mode, you may want the date range picker widget to be renderred when the page loads
-	set this to true will also hide the "close" button</i>
+	<i>if you use inline mode, you may want the date range picker widget to be renderred
+	when the page loads set this to true will also hide the "close" button</i>
 <b>singleDate (Boolean)</b>
 	<i>choose a single date instead of a date range. If `singleMonth` option is set to true it will show
 	only one month instead of two months.</i>
@@ -680,11 +674,11 @@ $('#date-range16-reset').click(function(evt)
 	[2]: an optional popup tooltip for this date
 	The function is called for each day in the datepicker before it is displayed.</i>
 <b>stickyMonths (Boolean)</b>
-	<i>If true, there will only be one previous and one next button. Clicking them will change
-	both the months. This setting will have no effect if singleDate option is set to true</i>
-<b>singleMonth (Boolean) Default value: false</b>
-	<i>If true, it will show only one month instead of two months. You can select date range
-	in the one month view.</i>
+	<i>If true, there will only be one previous and one next button --
+	clicking them will change both the months.</i>
+<b>singleMonth (Boolean)</b>
+	<i>If true, it will show only one month instead of two months.
+	This setting is independent of singleDate, date range selection is allowed in one month view.</i>
 <b>showDateFilter (Function(Int time, Int date))</b>
 	<i>This is a callback function when creating each date element in the calendar. First paramter will
 	be the timestamp of that day. Second parameter will be the date of that month.</i>
