--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
 		<title>Date Picker Demo</title>
 		<!--link rel="stylesheet" type="text/css" href="https://bootswatch.com/slate/bootstrap.min.css" />
@@ -24,6 +23,12 @@
 		}
 		.demo { margin:30px 20px 0 0; }
 		button { color: black !important; }
+		pre
+		{
+			font-size:12px;
+			background:#eee;
+			padding:0.5em;
+		}
 		.options
 		{
 			display:none;
@@ -33,12 +38,6 @@
 			line-height:1.4;
 			background-color:#eee;
 			border-radius:4px;
-		}
-		pre
-		{
-			font-size:12px;
-			background:#eee;
-			padding:0.5em;
 		}
 		</style>
 	</head>
@@ -77,9 +76,9 @@
 			</span>
             <h2 id="installation">Installation</h2>
 <pre>
-&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.min.css">
+&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.min.css" />
 &lt;!-- Optional "Slate" color theme -->
-&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.slate.delta.min.css">
+&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.slate.delta.min.css" />
 &lt;script type="text/javascript" src="moment.min.js">&lt;/script>
 &lt;script type="text/javascript" src="jquery.min.js">&lt;/script>
 &lt;script type="text/javascript" src="dist/jquery.daterangepicker.min.js">&lt;/script>
